[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "time_kit"
version = "0.0.1"
authors = [
    {name="KpihX", email="kapoivha@gmail.com"}
]
maintainers = [
    {name="KpihX", email="kapoivha@gmail.com"}
]
description = "A library to represents and easily manipulate duration in the format %y %d %h %m %s"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.8"
keywords = ["time", "duration", "date", "format", "timekit"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/sampleproject"
Issues = "https://github.com/pypa/sammpleproject/issues"
Repository = "https://github.com/me/spam.git"